--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,19 +2,47 @@ body {
     background-color: #0f0f11;
 }
 
+#app{
+    margin-top: 5rem;
+}
+
+.profile-pic {
+    border-radius: 50%;
+    width: 150px;
+    margin-top: 2rem;
+    margin-bottom: 7rem;
+}
+
 .artistcard  {
+    border-radius: 10px;
     width: 300px;
     background-color: #151515;
 }
 .artistcard img {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     width: 300px;
     height: 300px;
 }
 .artistcard h3 {
     color: white;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     text-align: center;
 }
-
+input[id=seachInput]{
+    padding: .7em;
+}
+th, td {
+    color: white;
+}
+tr td {
+    padding-bottom: 2rem;
+}
+tr td img{
+    width: 150px;
+    border-radius: 50%;
+}
 
 /* Social media buttons */
 ul.share-buttons{
