--- a/public/public_html/css/app.css
+++ b/public/public_html/css/app.css
@@ -33,6 +33,12 @@ body {
 input[id=seachInput]{
     padding: .7em;
 }
+th {
+    font-size: 2rem;
+}
+td {
+    font-weight: bold;
+}
 th, td, td a{
     color: white;
 }
@@ -46,12 +52,26 @@ tr td img{
     width: 150px;
     border-radius: 50%;
 }
+
 /* Tracks */
 
 .tracks {
     margin-top: 5rem;
     margin-bottom: 2rem;
 }
+.tracks h2 {
+    margin-bottom: 2rem;
+}
+.tracks h3 {
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
+.tracks h3 span a {
+    color: white;
+    text-decoration: none;
+    font-weight: lighter;
+}
+
 /* Social media buttons */
 ul.share-buttons{
     list-style: none;
@@ -65,6 +85,7 @@ ul.share-buttons{
   ul.share-buttons li:first-child{
       margin-left: 0px;
   }
+  
   ul.share-buttons .sr-only{
     position: absolute;
     clip: rect(1px 1px 1px 1px);
@@ -75,5 +96,4 @@ ul.share-buttons{
     width: 1px;
     overflow: hidden;
   }
-
 
